2007-03-14  Martin Hunt  <hunt@redhat.com>
	* stpd: Remove directory.
	* relayfs: Remove directory.
	
2007-03-14  Martin Hunt  <hunt@redhat.com>	
	* bench2/bench.rb: Updated to work with new transport
	and new itest.c.
	* bench2/Makefile: Updated for new itest.c
	* bench2/itest.c: Rewritten to use multiple threads
	and automatically divide the workload among the threads.

	* print.c (_stp_print_flush): Move to print_new.c and 
	print_old.c.
	* print_new.c: New file containing _stp_print_flush()
	for the new transport.
	* print_old.c: Ditto for old transport.

	* runtime.h (STP_OLD_TRANSPORT): Define
	(errk): Define.
	(MAXSTRINGLEN): Define if not already defined.

	* io.c (_stp_vlog): Use _stp_ctl_write().

2007-03-12  Frank Ch. Eigler  <fche@redhat.com>

	PR 4179.
	Based on patch from Vasily Averin <vvs@sw.ru>:
	* time.c (_stp_init_time): Recover from partial failures.

2007-03-01  David Wilder <dwilder@us.ibm.com>

	* loc2c-runtime.h: rewrote s390x version of __stp_put_asm
	and __stp_put_asm to do single byte writes.

2007-02-27  David Wilder <dwilder@us.ibm.com>

	* loc2c-runtime.h: Added defines for EX_TABLE needed by older
	s390 kernels that do not already have it defined.

2007-02-07  Martin Hunt  <hunt@redhat.com>

	* stack-ppc64.c (__stp_stack_print): Remove an old
	reference to the string length and instead limit backtraces
	to MAXBACKTRACE.
	* stack.c: Define MAXBACKTRACE

2007-02-06  Josh Stone  <joshua.i.stone@intel.com>

	* loc2c-runtime.h (kread): Let it work with const types.

2007-01-31  Martin Hunt  <hunt@redhat.com>

	* string.c (_stp_string_init): Deleted.
	(_stp_sprintf): Deleted.
	(_stp_vsprintf): Deleted.
	(_stp_string_cat_cstr): Deleted.
	(_stp_string_cat_string): Deleted.
	(_stp_string_cat_char): Deleted.
	(_stp_string_ptr): Deleted.
	(_stp_string_cat): Deleted.
	(_stp_snprintf): Moved from vsprintf.c.
	(_stp_vscnprintf): Moved from vsprintf.c.

	* string.h (STP_STRING_SIZE): Deleted.
	(STP_NUM_STRINGS): Deleted.